removed text that Amy pointed out and fixed top bar issue that showed up on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,12 @@
     margin: 0;
     padding: 0;
 }
+img {opacity:0;
+-moz-transition: opacity 2s; /* Firefox 4 */
+-webkit-transition: opacity 2s; /* Safari and Chrome */
+-o-transition: opacity 2s;
+transition: opacity 2s;
+}
 body {
     background: rgb(123, 158, 158);
 }
@@ -166,6 +172,17 @@ body{
   }
 }
 
+#picctures{
+	opacity:1;
+
+-moz-transition: opacity 2s; /* Firefox 4 */
+
+-webkit-transition: opacity 2s; /* Safari and Chrome */
+
+-o-transition: opacity 2s;
+
+transition: opacity 2s;
+}
 
 #fork{
   position:fixed;
@@ -231,7 +248,7 @@ body{
 	font-family: 'Open Sans', Arial;
 	padding-left: 1%;
 	padding-right: 1%;
-	font-size: 180%;
+	font-size: 2.5vw;
 }
 body, html{
 	font-family: 'Lato', sans-serif;
@@ -348,14 +365,17 @@ font-weight: 900;
 	}
 /* Home Style */
 #tf-home{
+	
 	background: url(../img/01.jpg);
 	background-size: cover;
 	background-position: center;
 	background-attachment: fixed;
 	background-repeat: no-repeat;
 	color: #cfcfcf;
+	
 }
 #tf-rush1{
+	
 	background: url(../img/rush1.jpg);
 	background-size: cover;
 	background-position: center;
@@ -366,6 +386,7 @@ font-weight: 900;
 
 #tf-rush2{
 	background: url(../img/rush2.jpg);
+	
 	background-size: cover;
 	background-position: center;
 	background-attachment: fixed;
@@ -392,7 +413,7 @@ font-weight: 900;
 
 .content{
 	position: relative;
-	padding: 20% 0 0;
+	padding: 20% 0 0 ;
 }
 
 .color{
